# axum-seaorm-mytutorial

./: Cargo.toml  README.md  docker-compose.yaml
entity/: Cargo.toml
entity/src/: mod.rs  post.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
